--- a/index.html
+++ b/index.html
@@ -5,23 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    
+
     <title>GifTastic</title>
 
 </head>
 
 <body>
-    <div id="topicBtns"> 
+    <div id="topicBtns">
         <!-- buttons go here -->
     </div>
-    <div id="gifs">
-        <!-- gifs go here -->
-    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-9">
+                <div id="gifs">
+                    <!-- gifs go here -->
+                </div>
+            </div>
+            <div class="col-3">
+                <form id="add-topic-form">
+                    <label for="topic-input">New Topic</label>
+                    <input type="text" id="topic-input">
+                    <input id="add-topic" class="btn btn-info btnMargin" type="submit" value="New Topic">
+                </form>
 
+            </div>
+        </div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="/assets/javascript/giftastic.js"></script>
 
