--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="/assets/javascript/giftastic.js"></script>
+    <script src="./assets/javascript/giftastic.js"></script>
 
 </body>
 
