Switched up how images are added with jQuery

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-9">
-                <div id="gifs">
+                <div id="gifs" class="row">
                     <!-- gifs go here -->
                 </div>
             </div>
@@ -32,7 +32,6 @@
                     <input type="text" id="topic-input">
                     <input id="add-topic" class="btn btn-info btnMargin" type="submit" value="New Topic">
                 </form>
-
             </div>
         </div>
     </div>
